# C.H.U.G.G.

./: .gitignore  README.md
chugg/: CMakeLists.txt  package.xml
chugg_finder/: CMakeLists.txt  package.xml
chugg_finder/cfg/: ChuggFinder.cfg  ICP.cfg
chugg_finder/include/chugg_finder/: chugg_finder_node.h
chugg_finder/launch/: chugg_finder.launch  markers.launch
chugg_finder/nodes/: chugg_finder_node.cpp
chugg_finder/params/: MarkerData_0_1_2_3_4_5.xml
chugg_launch/: CMakeLists.txt  package.xml
chugg_launch/launch/: base_sensors.launch  cube.launch  main.launch  sensors.launch  show_kinect.launch  tracker.launch  visual.launch
chugg_launch/params/: chugg.rviz  chugg.urdf
chugg_learning/: CMakeLists.txt  package.xml  setup.py
chugg_learning/launch/: simulator_learner_demo.launch
chugg_learning/scripts/: hardware_1d_learner  learner_in_quotes  offline_simulator_1d_learner  offline_simulator_learner  online_simulator_1d_learner  online_simulator_learner  tune_1d.py
chugg_learning/src/chugg_learning/: RBF.py  __init__.py  chugg_1d_domain.py  chugg_domain.py  hardware_1d_domain.py  rbf_experiment.py  simulator_1d_domain.py  simulator_domain.py  utilities.py
chugg_model/: CMakeLists.txt  package.xml
chugg_model/launch/: chugg_model.launch
chugg_model/urdf/: chugg.urdf
chugg_physics/: CMakeLists.txt  package.xml  setup.py
chugg_physics/launch/: chugg_simulator.launch
chugg_physics/scripts/: chugg_simulator_console
chugg_physics/src/chugg_physics/: ChuggSimulator.py  ROSChuggSimulator.py  __init__.py  speed2torque.py  test_speed2torque.py
chugg_tracker/: CMakeLists.txt  package.xml
chugg_tracker/cfg/: ChuggFilter.cfg
chugg_tracker/include/chugg_tracker/: chugg_filter.h  chugg_tracker_node.h  imu_measurement_pdf.h  marker_measurement_pdf.h  quaternion.h  system_pdf_constant_velocity.h
chugg_tracker/launch/: chugg_tracker.launch
chugg_tracker/msg/: Posterior.msg  Sample.msg
chugg_tracker/nodes/: chugg_tracker_node.cpp
chugg_tracker/params/: filter.yaml
chugg_tracker/src/: chugg_filter.cpp  imu_measurement_pdf.cpp  marker_measurement_pdf.cpp  quaternion.cpp  system_pdf_constant_velocity.cpp
imu_driver/: CMakeLists.txt  package.xml
imu_driver/include/imu_driver/: imu_driver_node.h
imu_driver/launch/: imu_driver.launch
imu_driver/nodes/: imu_driver_node.cpp
imu_driver/params/: bias.yaml
misc/: ros_master.bash
motor_driver/: CMakeLists.txt  package.xml  setup.py
motor_driver/cfg/: Motor.cfg  MotorManager.cfg  SetMotor.cfg
motor_driver/launch/: motor_driver.launch  set_motor.launch
motor_driver/params/: motors.yaml
motor_driver/scripts/: export_gpio.sh  motor_driver  set_motor
motor_driver/src/motor_driver/: Adafruit_I2C.py  Motor.py  MotorManager.py  __init__.py  constants.py
